--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -5,6 +5,10 @@ input
   }
 }
 
+filter {
+ 
+}
+
 output {
   elasticsearch {
     hosts => [ "Elasticsearch"]
@@ -12,3 +16,19 @@ output {
   }
   stdout { codec => rubydebug }
 }
+
+grok {
+    match => { "message" => "%{COMBINEDAPACHELOG}" }
+  }
+
+date {
+    match => [ "timestamp" , "dd/MMM/yyyy:HH:mm:ss Z" ]
+  }
+
+mutate {
+    rename => { "[source][address]" => "[client][ip]" }
+    }
+geoip {
+    source => "[client][ip]"
+    ecs_compatibility => "disabled"
+  }
