--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -1,12 +1,11 @@
+# Modif finale du fichier logstash.conf
 input
 {
     file {
     path => "/input/inlog.log"
   }
 }
-
 filter {
- 
 }
 
 output {
@@ -32,3 +31,6 @@ geoip {
     source => "[client][ip]"
     ecs_compatibility => "disabled"
   }
+useragent {
+        source => 'message'
+      }
